--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+*practice*
+*practice/
+*practice/*
+
 # Created by https://www.toptal.com/developers/gitignore/api/vscode
 # Edit at https://www.toptal.com/developers/gitignore?templates=vscode
 
