ignore가 붙는 모든 파일과 디렉토리는 무시하라

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 *practice*
 *practice/
 *practice/*
+*ignore*
+*ignore/
+*igrnoe/*
 
 # Created by https://www.toptal.com/developers/gitignore/api/vscode
 # Edit at https://www.toptal.com/developers/gitignore?templates=vscode
